; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_hfc4s8s_l1.c_hfc_l1_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_hfc4s8s_l1.c_hfc_l1_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hfc4s8s_l1 = type { i32, i32, i32, i32, %struct.TYPE_4__, i64, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*, i32, i32*)* }

@R_ST_SEL = common dso_local global i32 0, align 4
@A_ST_WR_STA = common dso_local global i32 0, align 4
@PH_DEACTIVATE = common dso_local global i32 0, align 4
@INDICATION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hfc4s8s_l1*)* @hfc_l1_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hfc_l1_timer(%struct.hfc4s8s_l1* %0) #0 {
  %2 = alloca %struct.hfc4s8s_l1*, align 8
  %3 = alloca i32, align 4
  store %struct.hfc4s8s_l1* %0, %struct.hfc4s8s_l1** %2, align 8
  %4 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %5 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %4, i32 0, i32 6
  %6 = load i32, i32* %5, align 8
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %116

9:                                                ; preds = %1
  %10 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %11 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %10, i32 0, i32 2
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @spin_lock_irqsave(i32* %11, i32 %12)
  %14 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %15 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %14, i32 0, i32 5
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %65

18:                                               ; preds = %9
  %19 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %20 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %19, i32 0, i32 0
  store i32 1, i32* %20, align 8
  %21 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %22 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @R_ST_SEL, align 4
  %25 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %26 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @Write_hfc8(i32 %23, i32 %24, i32 %27)
  %29 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %30 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @A_ST_WR_STA, align 4
  %33 = call i32 @Write_hfc8(i32 %31, i32 %32, i32 17)
  %34 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %35 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %34, i32 0, i32 2
  %36 = load i32, i32* %3, align 4
  %37 = call i32 @spin_unlock_irqrestore(i32* %35, i32 %36)
  %38 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %39 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %38, i32 0, i32 4
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 0
  %42 = load i32 (%struct.TYPE_5__*, i32, i32*)*, i32 (%struct.TYPE_5__*, i32, i32*)** %41, align 8
  %43 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %44 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %43, i32 0, i32 4
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  %46 = load i32, i32* @PH_DEACTIVATE, align 4
  %47 = load i32, i32* @INDICATION, align 4
  %48 = or i32 %46, %47
  %49 = call i32 %42(%struct.TYPE_5__* %45, i32 %48, i32* null)
  %50 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %51 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %50, i32 0, i32 2
  %52 = load i32, i32* %3, align 4
  %53 = call i32 @spin_lock_irqsave(i32* %51, i32 %52)
  %54 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %55 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %54, i32 0, i32 0
  store i32 1, i32* %55, align 8
  %56 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %57 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %56, i32 0, i32 3
  %58 = load i32, i32* %57, align 4
  %59 = load i32, i32* @A_ST_WR_STA, align 4
  %60 = call i32 @Write_hfc8(i32 %58, i32 %59, i32 1)
  %61 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %62 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %61, i32 0, i32 2
  %63 = load i32, i32* %3, align 4
  %64 = call i32 @spin_unlock_irqrestore(i32* %62, i32 %63)
  br label %116

65:                                               ; preds = %9
  %66 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %67 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %66, i32 0, i32 3
  %68 = load i32, i32* %67, align 4
  %69 = load i32, i32* @R_ST_SEL, align 4
  %70 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %71 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %70, i32 0, i32 1
  %72 = load i32, i32* %71, align 4
  %73 = call i32 @Write_hfc8(i32 %68, i32 %69, i32 %72)
  %74 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %75 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %74, i32 0, i32 3
  %76 = load i32, i32* %75, align 4
  %77 = load i32, i32* @A_ST_WR_STA, align 4
  %78 = call i32 @Write_hfc8(i32 %76, i32 %77, i32 19)
  %79 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %80 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %79, i32 0, i32 2
  %81 = load i32, i32* %3, align 4
  %82 = call i32 @spin_unlock_irqrestore(i32* %80, i32 %81)
  %83 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %84 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %83, i32 0, i32 4
  %85 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %84, i32 0, i32 0
  %86 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %85, i32 0, i32 0
  %87 = load i32 (%struct.TYPE_5__*, i32, i32*)*, i32 (%struct.TYPE_5__*, i32, i32*)** %86, align 8
  %88 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %89 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %88, i32 0, i32 4
  %90 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %89, i32 0, i32 0
  %91 = load i32, i32* @PH_DEACTIVATE, align 4
  %92 = load i32, i32* @INDICATION, align 4
  %93 = or i32 %91, %92
  %94 = call i32 %87(%struct.TYPE_5__* %90, i32 %93, i32* null)
  %95 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %96 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %95, i32 0, i32 2
  %97 = load i32, i32* %3, align 4
  %98 = call i32 @spin_lock_irqsave(i32* %96, i32 %97)
  %99 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %100 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %99, i32 0, i32 3
  %101 = load i32, i32* %100, align 4
  %102 = load i32, i32* @R_ST_SEL, align 4
  %103 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %104 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %103, i32 0, i32 1
  %105 = load i32, i32* %104, align 4
  %106 = call i32 @Write_hfc8(i32 %101, i32 %102, i32 %105)
  %107 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %108 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %107, i32 0, i32 3
  %109 = load i32, i32* %108, align 4
  %110 = load i32, i32* @A_ST_WR_STA, align 4
  %111 = call i32 @Write_hfc8(i32 %109, i32 %110, i32 3)
  %112 = load %struct.hfc4s8s_l1*, %struct.hfc4s8s_l1** %2, align 8
  %113 = getelementptr inbounds %struct.hfc4s8s_l1, %struct.hfc4s8s_l1* %112, i32 0, i32 2
  %114 = load i32, i32* %3, align 4
  %115 = call i32 @spin_unlock_irqrestore(i32* %113, i32 %114)
  br label %116

116:                                              ; preds = %8, %65, %18
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i32) #1

declare dso_local i32 @Write_hfc8(i32, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
